fixed pub award spacing on mobie

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,7 +168,7 @@ hr {
 .pubaward {
   color: #bd5319;
   font-weight: bold;
-  font-size: 80%;
+  font-size: 75%;
   bottom:0;
   right:0;
   position: relative;
